Some country names with the first letter in lower case were corrected.

--- a/locale/locale-info.json
+++ b/locale/locale-info.json
@@ -28,7 +28,7 @@
 	{ "code": "BO", "es_name": "Bolivia", "en_name": "Bolivia" },
 	{ "code": "BA", "es_name": "Bosnia Herzegovina", "en_name": "Bosnia Herzegovina" },
 	{ "code": "BW", "es_name": "Botsuana", "en_name": "Botswana" },
-	{ "code": "BR", "es_name": "Brasil", "en_name": "brazil" },
+	{ "code": "BR", "es_name": "Brasil", "en_name": "Brazil" },
 	{ "code": "BN", "es_name": "Brunéi", "en_name": "Brunei Darussalam" },
 	{ "code": "BG", "es_name": "Bulgaria", "en_name": "Bulgaria" },
 	{ "code": "BF", "es_name": "Burkina Faso", "en_name": "Burkina Faso" },
@@ -124,7 +124,7 @@
 	{ "code": "IL", "es_name": "Israel", "en_name": "Israel" },
 	{ "code": "IT", "es_name": "Italia", "en_name": "Italy" },
 	{ "code": "YU", "es_name": "Yugoslavia", "en_name": "Yugoslavia" },
-	{ "code": "JM", "es_name": "Jamaica", "en_name": "jamaica" },
+	{ "code": "JM", "es_name": "Jamaica", "en_name": "Jamaica" },
 	{ "code": "JP", "es_name": "Japón", "en_name": "Japan" },
 	{ "code": "JO", "es_name": "Jordán", "en_name": "Jordan" },
 	{ "code": "KI", "es_name": "Kiribati", "en_name": "Kiribati" },
