Many changes were applied to the bot's operation in its first alpha version

--- a/locale/es/about.json
+++ b/locale/es/about.json
@@ -6,5 +6,10 @@
     "name": "Zukaritasu",
     "url": "https://github.com/Zukaritasu",
     "icon_url": "https://avatars.githubusercontent.com/u/77790801?v=4"
+  },
+  "thumbnail": {
+    "url": "https://media.discordapp.net/attachments/1043902730206462052/1219441935518011462/about_image_dl_pb_gd.png",
+    "height": 0,
+    "width": 0
   }
 }
