--- a/locale/us/help/main.json
+++ b/locale/us/help/main.json
@@ -1,13 +1,8 @@
 {
     "title": "/main",
     "color": 3121744,
-    "fields": [
-        {
-            "name": "/main",
-            "value": "Displays a list of the levels that are in the top 75 of the Demonlist."
-        }
-    ],
+    "description": "Displays a list of the levels that are in the top 75 of the **Demonlist**.",
     "footer": {
-        "text": "PointerBot"
+        "text": "PointerBot - Page 6/9"
     }
 }
