--- a/locale/us/help/extended.json
+++ b/locale/us/help/extended.json
@@ -1,13 +1,8 @@
 {
     "title": "/extended",
     "color": 3121744,
-    "fields": [
-        {
-            "name": "/main",
-            "value": "Displays a list of the levels that are in the top 75 of the Demonlist."
-        }
-    ],
+    "description": "Displays a list of the levels that are in the extended list from the range of the top 76 - 150 of the **Demonlist**.",
     "footer": {
-        "text": "PointerBot"
+        "text": "PointerBot - Page 3/9"
     }
 }
