--- a/locale/us/help/legacy.json
+++ b/locale/us/help/legacy.json
@@ -1,13 +1,8 @@
 {
     "title": "/legacy",
     "color": 3121744,
-    "fields": [
-        {
-            "name": "/main",
-            "value": "Displays a list of the levels that are in the top 75 of the Demonlist."
-        }
-    ],
+    "description": "Displays a list of the levels left as a legacy of the **Demonlist**. These levels are below the top 150.",
     "footer": {
-        "text": "PointerBot"
+        "text": "PointerBot - Page 4/9"
     }
 }
