--- a/locale/us/help/about.json
+++ b/locale/us/help/about.json
@@ -3,6 +3,6 @@
     "color": 3121744,
     "description": "Displays information about the bot and other important details.",
     "footer": {
-        "text": "PointerBot - Page 1/9"
+        "text": ""
     }
 }
