--- a/locale/us/help/extended.json
+++ b/locale/us/help/extended.json
@@ -3,6 +3,6 @@
     "color": 3121744,
     "description": "Displays a list of the levels that are in the extended list from the range of the top 76 - 150 of the **Demonlist**.",
     "footer": {
-        "text": "PointerBot - Page 3/9"
+        "text": ""
     }
 }
