--- a/locale/us/help/top.json
+++ b/locale/us/help/top.json
@@ -3,6 +3,6 @@
     "color": 3121744,
     "description": "Displays the current Top 1 level of the **Demonlist**.",
     "footer": {
-        "text": "PointerBot -  Page 9/9"
+        "text": ""
     }
 }
