--- a/locale/es/help/legacy.json
+++ b/locale/es/help/legacy.json
@@ -1,13 +1,8 @@
 {
     "title": "/legacy",
     "color": 3121744,
-    "fields": [
-        {
-            "name": "/main",
-            "value": "Displays a list of the levels that are in the top 75 of the Demonlist."
-        }
-    ],
+    "description": "Muestra una lista de los niveles que han quedado como herencia de la **Demonlist**. Estos niveles están por debajo de los 150 primeros.",
     "footer": {
-        "text": "PointerBot"
+        "text": ""
     }
 }
