--- a/locale/us/help/countrystats.json
+++ b/locale/us/help/countrystats.json
@@ -3,6 +3,6 @@
     "color": 3121744,
     "description": "Displays player statistics by country.",
     "footer": {
-        "text": "PointerBot - Page 2/9"
+        "text": ""
     }
 }
