--- a/locale/us/help/legacy.json
+++ b/locale/us/help/legacy.json
@@ -3,6 +3,6 @@
     "color": 3121744,
     "description": "Displays a list of the levels left as a legacy of the **Demonlist**. These levels are below the top 150.",
     "footer": {
-        "text": "PointerBot - Page 4/9"
+        "text": ""
     }
 }
