--- a/locale/us/help/main.json
+++ b/locale/us/help/main.json
@@ -3,6 +3,6 @@
     "color": 3121744,
     "description": "Displays a list of the levels that are in the top 75 of the **Demonlist**.",
     "footer": {
-        "text": "PointerBot - Page 6/9"
+        "text": ""
     }
 }
